--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -96,7 +96,7 @@ a {
 .navbar {
   background-color: rgba(0, 0, 0, 0);
   flex: none;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   padding-top: 10px;
   position: static;
   top: 0%;
@@ -111,12 +111,12 @@ a {
 
 .logo-heading {
   color: #2e3193;
-  letter-spacing: 1px;
+  letter-spacing: .5px;
   text-transform: uppercase;
-  font-family: League Gothic, sans-serif;
-  font-size: 32px;
-  font-weight: 400;
-  line-height: 34px;
+  font-family: Signika, sans-serif;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 28px;
 }
 
 .nav-menu {
@@ -169,14 +169,14 @@ a {
   text-align: center;
   letter-spacing: 2px;
   text-transform: uppercase;
-  font-family: League Gothic, sans-serif;
+  font-family: Signika, sans-serif;
   font-size: 80px;
-  font-weight: 400;
-  line-height: 94px;
+  font-weight: 600;
+  line-height: 90px;
 }
 
 .button {
-  background-color: #ff7347;
+  background-color: #ff602e;
   border-radius: 50px;
   margin-top: 20px;
   padding: 10px 20px;
@@ -195,7 +195,7 @@ a {
   background-color: #f4f4ff;
   margin-top: 80px;
   padding-top: 60px;
-  padding-bottom: 90px;
+  padding-bottom: 60px;
   position: relative;
 }
 
@@ -209,8 +209,8 @@ a {
 
 .heading-four {
   color: #2e3193;
-  letter-spacing: 1px;
-  font-family: League Gothic, sans-serif;
+  letter-spacing: 0;
+  font-family: Signika, sans-serif;
   font-size: 54px;
   font-weight: 400;
   line-height: 54px;
@@ -220,6 +220,7 @@ a {
   color: #222;
   margin-top: 20px;
   font-size: 24px;
+  font-weight: 600;
   line-height: 34px;
 }
 
@@ -286,7 +287,7 @@ a {
 
 .icon-title {
   color: #2e3193;
-  text-align: center;
+  text-align: left;
   font-size: 24px;
   font-weight: 600;
   line-height: 36px;
@@ -297,13 +298,15 @@ a {
 
 .icon-description {
   color: #222;
+  text-align: left;
   margin-top: 10px;
   display: block;
 }
 
 .icon-image {
   width: 94px;
-  background-color: #ff7347;
+  float: left;
+  background-color: #ff602e;
   border-radius: 100px;
   flex-direction: row;
   grid-template-rows: auto auto;
@@ -568,16 +571,16 @@ a {
 }
 
 .icon-card-content-parent {
-  text-align: center;
+  text-align: left;
   align-items: stretch;
   display: block;
 }
 
 .heading-four-contact {
   color: #fff;
-  letter-spacing: 1px;
+  letter-spacing: 0;
   text-transform: none;
-  font-family: League Gothic, sans-serif;
+  font-family: Signika, sans-serif;
   font-size: 54px;
   font-weight: 400;
   line-height: 54px;
@@ -847,6 +850,15 @@ a {
   margin-bottom: 40px;
 }
 
+.subtitle {
+  color: #222;
+  margin-top: 40px;
+  font-family: Signika, sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 34px;
+}
+
 @media screen and (max-width: 991px) {
   .navbar {
     position: relative;
@@ -883,6 +895,10 @@ a {
     background-color: #2e3193;
   }
 
+  .hero {
+    margin-top: 20px;
+  }
+
   .hero-content {
     margin-left: 20px;
     margin-right: 20px;
@@ -900,12 +916,13 @@ a {
   }
 
   .intro-section {
+    margin-top: 60px;
     padding-top: 20px;
     padding-bottom: 60px;
   }
 
   .heading-four {
-    font-size: 34px;
+    font-size: 40px;
   }
 
   .paragraph {
@@ -993,6 +1010,11 @@ a {
   .div-block-6 {
     width: 8%;
   }
+
+  .subtitle {
+    margin-top: 20px;
+    font-size: 20px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1003,6 +1025,7 @@ a {
 
   .hero {
     background-size: 140%;
+    margin-top: 20px;
   }
 
   .hero-content {
@@ -1116,6 +1139,7 @@ a {
 
   .hero {
     background-size: 140%;
+    margin-top: 20px;
     padding-bottom: 0;
   }
 
@@ -1144,6 +1168,7 @@ a {
   }
 
   .intro-section {
+    margin-top: 40px;
     padding-top: 10px;
     padding-bottom: 80px;
   }
@@ -1153,8 +1178,9 @@ a {
   }
 
   .heading-four {
-    margin-bottom: 0;
-    font-size: 20px;
+    margin-bottom: 10px;
+    font-size: 30px;
+    line-height: 40px;
   }
 
   .paragraph {
@@ -1315,6 +1341,12 @@ a {
   .resources-div {
     width: 100%;
     margin-top: 40px;
+  }
+
+  .subtitle {
+    margin-top: 0;
+    font-size: 16px;
+    line-height: 26px;
   }
 }
 
