--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -170,7 +170,7 @@ a {
   letter-spacing: 2px;
   text-transform: uppercase;
   font-family: Signika, sans-serif;
-  font-size: 80px;
+  font-size: 64px;
   font-weight: 600;
   line-height: 90px;
 }
@@ -540,7 +540,7 @@ a {
 .intro-paragraph {
   color: #222;
   margin-top: 20px;
-  line-height: 38px;
+  line-height: 32px;
 }
 
 .intro-div {
@@ -623,9 +623,12 @@ a {
   width: 90%;
   color: #fff;
   text-align: left;
+  justify-content: space-between;
+  align-items: center;
   margin-left: auto;
   margin-right: auto;
   font-size: 14px;
+  display: flex;
 }
 
 .copyright {
@@ -859,6 +862,14 @@ a {
   line-height: 34px;
 }
 
+.back-to-top-circle {
+  width: 60px;
+  height: 60px;
+  background-color: #ff602e;
+  border-radius: 50px;
+  padding: 10px;
+}
+
 @media screen and (max-width: 991px) {
   .navbar {
     position: relative;
@@ -905,8 +916,8 @@ a {
   }
 
   .hero-heading-one {
-    font-size: 64px;
-    line-height: 76px;
+    font-size: 42px;
+    line-height: 48px;
   }
 
   .hero-heading-two {
@@ -1033,8 +1044,8 @@ a {
   }
 
   .hero-heading-one {
-    font-size: 52px;
-    line-height: 54px;
+    font-size: 30px;
+    line-height: 36px;
   }
 
   .hero-heading-two {
@@ -1151,7 +1162,7 @@ a {
   }
 
   .hero-heading-one {
-    font-size: 30px;
+    font-size: 28px;
     line-height: 34px;
   }
 
@@ -1295,6 +1306,16 @@ a {
 
   .link-block-text-contact {
     font-size: 16px;
+  }
+
+  .footer-div {
+    flex-direction: column-reverse;
+  }
+
+  .copyright {
+    text-align: center;
+    margin-top: 10px;
+    line-height: 20px;
   }
 
   .sticky-content-div {
