--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -1,3 +1,10 @@
+:root {
+  --black: #222;
+  --dark-slate-blue: #2e3193;
+  --ghost-white: #f4f4ff;
+  --orange-red: #ff602e;
+}
+
 .w-layout-grid {
   grid-row-gap: 16px;
   grid-column-gap: 16px;
@@ -15,7 +22,7 @@ body {
 }
 
 h1 {
-  color: #222;
+  color: var(--black);
   margin-top: 20px;
   margin-bottom: 10px;
   font-family: Montserrat, sans-serif;
@@ -25,7 +32,7 @@ h1 {
 }
 
 h2 {
-  color: #222;
+  color: var(--black);
   margin-top: 20px;
   margin-bottom: 10px;
   font-family: Montserrat, sans-serif;
@@ -35,7 +42,7 @@ h2 {
 }
 
 h3 {
-  color: #222;
+  color: var(--black);
   margin-top: 20px;
   margin-bottom: 10px;
   font-family: Montserrat, sans-serif;
@@ -45,7 +52,7 @@ h3 {
 }
 
 h4 {
-  color: #222;
+  color: var(--black);
   margin-top: 10px;
   margin-bottom: 10px;
   font-family: Figtree, sans-serif;
@@ -55,7 +62,7 @@ h4 {
 }
 
 h5 {
-  color: #222;
+  color: var(--black);
   margin-top: 10px;
   margin-bottom: 10px;
   font-family: Montserrat, sans-serif;
@@ -65,7 +72,7 @@ h5 {
 }
 
 h6 {
-  color: #222;
+  color: var(--black);
   margin-top: 10px;
   margin-bottom: 10px;
   font-family: Figtree, sans-serif;
@@ -75,19 +82,19 @@ h6 {
 }
 
 p {
-  color: #222;
+  color: var(--black);
   margin-bottom: 10px;
   font-weight: 400;
   line-height: 30px;
 }
 
 a {
-  color: #2e3193;
+  color: var(--dark-slate-blue);
   text-decoration: underline;
 }
 
 .body {
-  color: #222;
+  color: var(--black);
   font-family: Figtree, sans-serif;
   font-size: 18px;
   line-height: 24px;
@@ -106,11 +113,11 @@ a {
 }
 
 .brand {
-  color: #2e3193;
+  color: var(--dark-slate-blue);
 }
 
 .logo-heading {
-  color: #2e3193;
+  color: var(--dark-slate-blue);
   letter-spacing: .5px;
   text-transform: uppercase;
   font-family: Signika, sans-serif;
@@ -120,19 +127,26 @@ a {
 }
 
 .nav-menu {
-  color: #2e3193;
+  color: var(--dark-slate-blue);
 }
 
 .nav-link, .nav-link.w--current {
-  color: #2e3193;
+  color: var(--dark-slate-blue);
   font-size: 18px;
   font-weight: 700;
 }
 
 .header {
   height: auto;
-  flex-direction: column;
+  background-image: url('../images/3d-hero-elements.png'), linear-gradient(to top, var(--ghost-white), white);
+  background-position: 100%, 0 0;
+  background-repeat: no-repeat, repeat;
+  background-size: contain, auto;
+  flex-flow: column;
+  justify-content: flex-start;
+  align-items: stretch;
   margin-top: 10px;
+  padding-bottom: 80px;
   display: flex;
 }
 
@@ -140,11 +154,9 @@ a {
   height: auto;
   object-fit: fill;
   background-color: rgba(0, 0, 0, 0);
-  background-image: url('../images/understand-create-design-hero-bg.jpg');
-  background-position: 50% 0;
-  background-repeat: no-repeat;
-  background-size: contain;
+  flex-direction: row;
   justify-content: center;
+  align-self: flex-start;
   align-items: center;
   padding-bottom: 0;
   display: flex;
@@ -156,34 +168,34 @@ a {
 }
 
 .hero-content {
-  text-align: center;
-  flex: 1;
-  align-self: flex-start;
-  margin-top: 24%;
-  margin-left: 100px;
-  margin-right: 100px;
+  text-align: left;
+  flex: 0 60%;
+  align-self: center;
 }
 
 .hero-heading-one {
-  color: #2e3193;
-  text-align: center;
+  width: 70%;
+  color: var(--dark-slate-blue);
+  text-align: left;
   letter-spacing: 1px;
   text-transform: none;
   font-family: Signika, sans-serif;
-  font-size: 82px;
+  font-size: 68px;
   font-weight: 600;
-  line-height: 90px;
+  line-height: 80px;
 }
 
 .button {
-  background-color: #ff602e;
+  background-color: var(--orange-red);
+  text-align: left;
   border-radius: 50px;
   margin-top: 20px;
   padding: 10px 20px;
 }
 
 .hero-heading-two {
-  color: #2e3193;
+  color: var(--dark-slate-blue);
+  text-align: left;
   letter-spacing: 14px;
   text-transform: uppercase;
   margin-top: 10px;
@@ -192,15 +204,16 @@ a {
 }
 
 .intro-section {
-  background-color: #f4f4ff;
-  margin-top: 80px;
+  background-color: var(--ghost-white);
+  background-image: linear-gradient(#fff, rgba(46, 49, 147, .2));
   padding-top: 60px;
   padding-bottom: 60px;
   position: relative;
 }
 
 .intro-section.contact-section {
-  background-color: #2e3193;
+  background-color: var(--dark-slate-blue);
+  background-image: none;
   padding-top: 40px;
   padding-bottom: 100px;
   position: relative;
@@ -208,7 +221,7 @@ a {
 }
 
 .heading-four {
-  color: #2e3193;
+  color: var(--dark-slate-blue);
   letter-spacing: 0;
   font-family: Signika, sans-serif;
   font-size: 54px;
@@ -217,7 +230,7 @@ a {
 }
 
 .paragraph {
-  color: #222;
+  color: var(--black);
   margin-top: 20px;
   font-size: 24px;
   font-weight: 600;
@@ -250,7 +263,7 @@ a {
 }
 
 .link-block-text {
-  color: #2e3193;
+  color: var(--dark-slate-blue);
   margin-bottom: 0;
   text-decoration: underline;
 }
@@ -272,7 +285,7 @@ a {
 }
 
 .image {
-  color: #222;
+  color: var(--black);
   text-align: center;
   background-color: rgba(0, 0, 0, 0);
 }
@@ -286,7 +299,7 @@ a {
 }
 
 .icon-title {
-  color: #2e3193;
+  color: var(--dark-slate-blue);
   text-align: left;
   font-size: 24px;
   font-weight: 600;
@@ -297,7 +310,7 @@ a {
 }
 
 .icon-description {
-  color: #222;
+  color: var(--black);
   text-align: left;
   margin-top: 10px;
   display: block;
@@ -306,7 +319,7 @@ a {
 .icon-image {
   width: 94px;
   float: left;
-  background-color: #ff602e;
+  background-color: var(--orange-red);
   border-radius: 100px;
   flex-direction: row;
   grid-template-rows: auto auto;
@@ -349,7 +362,7 @@ a {
 
 .work1 {
   width: auto;
-  height: 600px;
+  height: 550px;
   background-color: rgba(0, 0, 0, 0);
   background-image: url('../images/DCH-Style-Guide-Thumb.jpg');
   background-position: 50%;
@@ -499,7 +512,7 @@ a {
 }
 
 .work-link-block {
-  width: 470px;
+  width: 550px;
   height: auto;
   text-align: left;
   flex: 0 4 auto;
@@ -522,14 +535,14 @@ a {
 }
 
 .work-heading {
-  color: #222;
+  color: var(--black);
   font-family: Figtree, sans-serif;
   font-weight: 700;
   text-decoration: none;
 }
 
 .paragraph-2 {
-  color: #222;
+  color: var(--black);
   text-decoration: none;
 }
 
@@ -538,7 +551,7 @@ a {
 }
 
 .intro-paragraph {
-  color: #222;
+  color: var(--black);
   margin-top: 20px;
   line-height: 32px;
 }
@@ -614,7 +627,7 @@ a {
 }
 
 .footer {
-  background-color: #f4f4ff;
+  background-color: var(--ghost-white);
   padding-top: 20px;
   padding-bottom: 20px;
 }
@@ -632,7 +645,7 @@ a {
 }
 
 .copyright {
-  color: #2e3193;
+  color: var(--dark-slate-blue);
 }
 
 .portfolio-section {
@@ -831,8 +844,8 @@ a {
 
 .project-button {
   width: 100%;
+  background-color: var(--dark-slate-blue);
   text-align: center;
-  background-color: #2e3193;
   border-radius: 50px;
   margin-top: 20px;
   padding-top: 10px;
@@ -854,7 +867,7 @@ a {
 }
 
 .subtitle {
-  color: #222;
+  color: var(--black);
   margin-top: 40px;
   font-family: Signika, sans-serif;
   font-size: 24px;
@@ -865,7 +878,7 @@ a {
 .back-to-top-circle {
   width: 60px;
   height: 60px;
-  background-color: #ff602e;
+  background-color: var(--orange-red);
   border-radius: 50px;
   padding: 10px;
 }
@@ -880,7 +893,7 @@ a {
   }
 
   .nav-menu {
-    background-color: #2e3193;
+    background-color: var(--dark-slate-blue);
     padding-top: 60px;
     padding-bottom: 60px;
   }
@@ -897,13 +910,13 @@ a {
   }
 
   .menu-button {
-    color: #2e3193;
+    color: var(--dark-slate-blue);
     padding: 5px;
     font-size: 32px;
   }
 
   .menu-button.w--open {
-    background-color: #2e3193;
+    background-color: var(--dark-slate-blue);
   }
 
   .hero {
@@ -964,12 +977,12 @@ a {
   }
 
   .work-div {
-    width: 85%;
+    width: 95%;
     grid-column-gap: 30px;
   }
 
   .work1 {
-    height: 430px;
+    height: 350px;
   }
 
   .work-link-block {
@@ -1092,7 +1105,7 @@ a {
   }
 
   .work1 {
-    height: 330px;
+    height: 250px;
   }
 
   .work-link-block {
@@ -1258,7 +1271,7 @@ a {
   }
 
   .work1 {
-    height: 370px;
+    height: 270px;
   }
 
   .work-link-block, .work-link-block.worklinkblock2col {
