--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -205,7 +205,6 @@ a {
 
 .intro-section {
   background-color: var(--ghost-white);
-  background-image: linear-gradient(#fff, rgba(46, 49, 147, .2));
   padding-top: 60px;
   padding-bottom: 60px;
   position: relative;
@@ -929,6 +928,7 @@ a {
   }
 
   .hero-heading-one {
+    width: 100%;
     font-size: 50px;
     line-height: 48px;
   }
@@ -940,7 +940,7 @@ a {
   }
 
   .intro-section {
-    margin-top: 60px;
+    margin-top: 20px;
     padding-top: 20px;
     padding-bottom: 60px;
   }
@@ -1176,6 +1176,7 @@ a {
   }
 
   .hero-heading-one {
+    margin-bottom: 20px;
     font-size: 28px;
     line-height: 34px;
   }
@@ -1193,7 +1194,7 @@ a {
   }
 
   .intro-section {
-    margin-top: 40px;
+    margin-top: 10px;
     padding-top: 10px;
     padding-bottom: 80px;
   }
