--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -155,9 +155,10 @@ a {
   object-fit: fill;
   background-color: rgba(0, 0, 0, 0);
   flex-direction: row;
-  justify-content: center;
+  justify-content: flex-start;
   align-self: flex-start;
   align-items: center;
+  margin: 40px 100px 0;
   padding-bottom: 0;
   display: flex;
   position: static;
@@ -168,13 +169,15 @@ a {
 }
 
 .hero-content {
+  max-width: 60%;
   text-align: left;
-  flex: 0 60%;
+  background-color: #2e3193;
+  flex: 1;
   align-self: center;
 }
 
 .hero-heading-one {
-  width: 70%;
+  width: 50%;
   color: var(--dark-slate-blue);
   text-align: left;
   letter-spacing: 1px;
@@ -205,7 +208,7 @@ a {
 
 .intro-section {
   background-color: var(--ghost-white);
-  padding-top: 60px;
+  padding-top: 40px;
   padding-bottom: 60px;
   position: relative;
 }
@@ -869,7 +872,7 @@ a {
   color: var(--black);
   margin-top: 40px;
   font-family: Signika, sans-serif;
-  font-size: 24px;
+  font-size: 30px;
   font-weight: 600;
   line-height: 34px;
 }
@@ -880,6 +883,39 @@ a {
   background-color: var(--orange-red);
   border-radius: 50px;
   padding: 10px;
+}
+
+.div-block-8 {
+  width: 550px;
+  height: 600px;
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: 0;
+  margin-left: 60px;
+  margin-right: 60px;
+  padding: 0;
+  position: relative;
+}
+
+.image-5 {
+  width: 250px;
+  position: absolute;
+}
+
+.image-6 {
+  width: 320px;
+  position: absolute;
+  top: 110px;
+  left: 180px;
+}
+
+.image-7 {
+  width: 360px;
+  position: absolute;
+  top: auto;
+  bottom: 0%;
+  left: 0;
+  right: 0%;
+  transform: translate(0, 90px);
 }
 
 @media screen and (max-width: 991px) {
@@ -919,7 +955,12 @@ a {
   }
 
   .hero {
+    flex-direction: row;
     margin-top: 20px;
+    margin-left: 40px;
+    margin-right: 40px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .hero-content {
@@ -929,6 +970,7 @@ a {
 
   .hero-heading-one {
     width: 100%;
+    text-align: left;
     font-size: 50px;
     line-height: 48px;
   }
@@ -940,7 +982,7 @@ a {
   }
 
   .intro-section {
-    margin-top: 20px;
+    margin-top: 0;
     padding-top: 20px;
     padding-bottom: 60px;
   }
@@ -960,10 +1002,12 @@ a {
 
   .icon-title {
     font-size: 22px;
+    line-height: 26px;
   }
 
   .icon-description {
     font-size: 16px;
+    line-height: 23px;
   }
 
   .icon-image {
@@ -1039,6 +1083,26 @@ a {
     margin-top: 20px;
     font-size: 20px;
   }
+
+  .div-block-8 {
+    height: 360px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .image-5 {
+    width: 130px;
+  }
+
+  .image-6 {
+    width: 190px;
+    top: 50px;
+    left: 80px;
+  }
+
+  .image-7 {
+    width: 200px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1048,8 +1112,10 @@ a {
   }
 
   .hero {
-    background-size: 140%;
+    background-image: none;
     margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .hero-content {
@@ -1082,7 +1148,7 @@ a {
   }
 
   .icon-card {
-    padding: 20px;
+    padding: 20px 0;
   }
 
   .icon-title {
@@ -1135,7 +1201,12 @@ a {
   }
 
   .icon-card-content {
-    width: 80%;
+    width: 70%;
+    margin-top: 0;
+  }
+
+  .icon-card-content-parent {
+    display: flex;
   }
 
   .portfolio-section {
@@ -1150,6 +1221,25 @@ a {
   .div-block-6 {
     width: 8%;
   }
+
+  .div-block-8 {
+    width: 450px;
+    height: 270px;
+  }
+
+  .image-5 {
+    width: 100px;
+  }
+
+  .image-6 {
+    width: 160px;
+    top: 40px;
+    left: 60px;
+  }
+
+  .image-7 {
+    width: 160px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -1163,7 +1253,8 @@ a {
   }
 
   .hero {
-    background-size: 140%;
+    background-image: none;
+    flex-direction: column-reverse;
     margin-top: 20px;
     padding-bottom: 0;
   }
@@ -1176,7 +1267,8 @@ a {
   }
 
   .hero-heading-one {
-    margin-bottom: 20px;
+    text-align: center;
+    margin-bottom: 0;
     font-size: 28px;
     line-height: 34px;
   }
@@ -1194,8 +1286,8 @@ a {
   }
 
   .intro-section {
-    margin-top: 10px;
-    padding-top: 10px;
+    margin-top: 0;
+    padding-top: 40px;
     padding-bottom: 80px;
   }
 
@@ -1233,11 +1325,12 @@ a {
 
   .grid {
     grid-row-gap: 20px;
+    grid-template-columns: 1fr;
   }
 
   .icon-card {
     text-align: left;
-    padding: 10px;
+    padding: 10px 0;
   }
 
   .icon-title {
@@ -1249,7 +1342,7 @@ a {
   }
 
   .icon-description {
-    margin-top: 10px;
+    margin-top: 0;
     font-size: 16px;
     line-height: 24px;
   }
@@ -1257,7 +1350,7 @@ a {
   .icon-image {
     width: 74px;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: 10px;
     padding: 5px;
   }
 
@@ -1290,8 +1383,8 @@ a {
 
   .intro-paragraph {
     margin-top: 10px;
-    font-size: 14px;
-    line-height: 28px;
+    font-size: 16px;
+    line-height: 27px;
   }
 
   .intro-div, .div-block-3 {
@@ -1302,6 +1395,11 @@ a {
     width: 80%;
     flex: 0 auto;
     align-self: flex-start;
+    margin-top: 0;
+  }
+
+  .icon-card-content-parent {
+    display: flex;
   }
 
   .heading-four-contact {
@@ -1381,8 +1479,27 @@ a {
 
   .subtitle {
     margin-top: 0;
-    font-size: 16px;
+    font-size: 20px;
     line-height: 26px;
+  }
+
+  .div-block-8 {
+    width: 300px;
+    height: 300px;
+  }
+
+  .image-5 {
+    width: 140px;
+  }
+
+  .image-6 {
+    width: 200px;
+    top: 40px;
+    left: 100px;
+  }
+
+  .image-7 {
+    width: 180px;
   }
 }
 
