--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -177,7 +177,7 @@ a {
 }
 
 .hero-heading-one {
-  width: 70%;
+  width: 100%;
   color: var(--dark-slate-blue);
   text-align: left;
   letter-spacing: 1px;
@@ -209,8 +209,8 @@ a {
 
 .intro-section {
   background-color: var(--ghost-white);
-  padding-top: 40px;
-  padding-bottom: 60px;
+  padding-top: 60px;
+  padding-bottom: 40px;
   position: relative;
 }
 
@@ -556,7 +556,8 @@ a {
 .intro-paragraph {
   color: var(--black);
   margin-top: 20px;
-  line-height: 32px;
+  font-size: 20px;
+  line-height: 34px;
 }
 
 .intro-div {
@@ -878,6 +879,10 @@ a {
   line-height: 34px;
 }
 
+.subtitle.hide-hero-text {
+  display: none;
+}
+
 .back-to-top-circle {
   width: 60px;
   height: 60px;
@@ -888,7 +893,7 @@ a {
 
 .div-block-8 {
   width: 600px;
-  height: 600px;
+  height: 670px;
   background-color: rgba(255, 255, 255, 0);
   border-radius: 0;
   margin-left: 0;
@@ -905,18 +910,22 @@ a {
 .image-6 {
   width: 320px;
   position: absolute;
-  top: 110px;
-  left: 130px;
+  top: 150px;
+  left: 160px;
 }
 
 .image-7 {
-  width: 360px;
+  width: 410px;
   position: absolute;
   top: auto;
   bottom: 0%;
   left: -40px;
   right: 0%;
-  transform: translate(0, 90px);
+  transform: translate(0, 120px);
+}
+
+.div-block-9 {
+  width: 70%;
 }
 
 @media screen and (max-width: 991px) {
@@ -1099,13 +1108,17 @@ a {
 
   .image-6 {
     width: 190px;
-    top: 50px;
-    left: 80px;
+    top: 60px;
+    left: 90px;
   }
 
   .image-7 {
-    width: 200px;
-    left: -10px;
+    width: 230px;
+    left: -40px;
+  }
+
+  .div-block-9 {
+    width: 100%;
   }
 }
 
@@ -1229,7 +1242,7 @@ a {
 
   .div-block-8 {
     width: 400px;
-    height: 270px;
+    height: 320px;
   }
 
   .image-5 {
@@ -1238,12 +1251,13 @@ a {
 
   .image-6 {
     width: 160px;
-    top: 40px;
+    top: 70px;
     left: 60px;
   }
 
   .image-7 {
-    width: 160px;
+    width: 200px;
+    left: -50px;
   }
 }
 
@@ -1486,9 +1500,14 @@ a {
   }
 
   .subtitle {
-    margin-top: 0;
+    text-align: left;
+    margin-top: 10px;
     font-size: 20px;
     line-height: 26px;
+  }
+
+  .subtitle.hero-area {
+    display: none;
   }
 
   .div-block-8 {
@@ -1507,8 +1526,8 @@ a {
   }
 
   .image-7 {
-    width: 180px;
-    left: 0;
+    width: 200px;
+    left: -20px;
   }
 }
 
