--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -14,6 +14,21 @@
   display: grid;
 }
 
+.w-layout-layout {
+  grid-row-gap: 20px;
+  grid-column-gap: 20px;
+  grid-auto-columns: 1fr;
+  justify-content: center;
+  padding: 20px;
+}
+
+.w-layout-cell {
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  display: flex;
+}
+
 body {
   color: #333;
   font-family: Montserrat, sans-serif;
@@ -520,6 +535,14 @@ a {
 
 .work1.fuelgroup {
   background-image: url('../images/fuel-group-trading-cover.jpg');
+}
+
+.work1.workcodlogo {
+  background-image: url('../images/cod-web-logo-concepts.jpg');
+}
+
+.work1.workhou {
+  background-image: url('../images/HOU-Cover.jpg');
 }
 
 .work-link-block {
@@ -1569,6 +1592,16 @@ a {
   grid-area: span 1 / span 1 / span 1 / span 1;
   align-self: auto;
   justify-self: auto;
+}
+
+#w-node-_7ef6622b-1f5f-7f6f-2aa3-7791a4d59dac-c746637d {
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr 1fr;
+}
+
+#w-node-cfa1d536-a4cc-e5a8-e64f-7905b71a799b-a058ecf9 {
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr;
 }
 
 
