--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -173,7 +173,7 @@ a {
   justify-content: space-between;
   align-self: flex-start;
   align-items: center;
-  margin: 40px 100px 0;
+  margin: 90px 100px 0;
   padding-bottom: 0;
   display: flex;
   position: static;
@@ -199,9 +199,9 @@ a {
   text-transform: none;
   margin-right: 60px;
   font-family: Signika, sans-serif;
-  font-size: 68px;
+  font-size: 60px;
   font-weight: 600;
-  line-height: 80px;
+  line-height: 72px;
 }
 
 .button {
@@ -927,15 +927,17 @@ a {
 }
 
 .div-block-8 {
-  width: 600px;
-  height: 600px;
+  width: 40%;
+  height: auto;
+  text-align: right;
   background-color: rgba(255, 255, 255, 0);
   border-radius: 0;
   justify-content: space-between;
-  margin-left: 0;
-  margin-right: 0;
-  padding: 0;
-  display: block;
+  align-items: flex-end;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 0 0 40px;
+  display: flex;
   position: relative;
 }
 
@@ -962,7 +964,15 @@ a {
 }
 
 .div-block-9 {
-  width: 60%;
+  width: 70%;
+}
+
+.image-8 {
+  width: 100%;
+  max-width: none;
+  text-align: right;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (max-width: 991px) {
@@ -1003,7 +1013,7 @@ a {
 
   .hero {
     flex-direction: row;
-    margin-top: 20px;
+    margin-top: 60px;
     margin-left: 40px;
     margin-right: 40px;
     padding-left: 0;
@@ -1019,7 +1029,7 @@ a {
     width: 100%;
     text-align: left;
     margin-right: 20px;
-    font-size: 40px;
+    font-size: 34px;
     line-height: 44px;
   }
 
@@ -1042,6 +1052,10 @@ a {
   .paragraph {
     margin-top: 10px;
     font-size: 20px;
+  }
+
+  .icon-div {
+    margin-top: 40px;
   }
 
   .grid {
@@ -1097,6 +1111,11 @@ a {
     margin-top: 60px;
   }
 
+  .intro-paragraph {
+    font-size: 18px;
+    line-height: 32px;
+  }
+
   .intro-div, .div-block-3 {
     width: 90%;
   }
@@ -1133,10 +1152,11 @@ a {
   }
 
   .div-block-8 {
-    width: 300px;
-    height: 400px;
+    width: 40%;
+    height: auto;
     margin-left: 0;
     margin-right: 0;
+    padding-left: 0;
   }
 
   .image-5 {
@@ -1158,8 +1178,8 @@ a {
   }
 
   .div-block-9 {
-    width: 50%;
-    margin-right: 40px;
+    width: 60%;
+    margin-right: 10px;
   }
 }
 
@@ -1171,6 +1191,7 @@ a {
 
   .hero {
     background-image: none;
+    flex-direction: column;
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
@@ -1181,6 +1202,7 @@ a {
   }
 
   .hero-heading-one {
+    text-align: center;
     margin-bottom: 0;
     margin-right: 10px;
     font-size: 34px;
@@ -1284,11 +1306,17 @@ a {
   .subtitle.hero-area {
     font-size: 18px;
     line-height: 26px;
+    display: none;
+  }
+
+  .subtitle.hide-hero-text {
+    display: block;
   }
 
   .div-block-8 {
-    width: 230px;
+    width: 50%;
     height: 320px;
+    padding-left: 0;
   }
 
   .image-5 {
@@ -1308,7 +1336,8 @@ a {
   }
 
   .div-block-9 {
-    width: 60%;
+    width: 90%;
+    text-align: center;
     margin-right: 0;
   }
 }
@@ -1341,10 +1370,10 @@ a {
 
   .hero-heading-one {
     text-align: center;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     margin-right: 0;
-    font-size: 30px;
-    line-height: 34px;
+    font-size: 24px;
+    line-height: 28px;
   }
 
   .button {
@@ -1567,8 +1596,9 @@ a {
   }
 
   .div-block-8 {
-    width: 300px;
-    height: 250px;
+    width: 60%;
+    height: auto;
+    padding-left: 0;
   }
 
   .image-5 {
