--- a/css/vanessa-salinas-portfolio.webflow.css
+++ b/css/vanessa-salinas-portfolio.webflow.css
@@ -3,6 +3,7 @@
   --dark-slate-blue: #2e3193;
   --ghost-white: #f4f4ff;
   --orange-red: #ff602e;
+  --color: rgba(255, 255, 255, 0);
 }
 
 .w-layout-grid {
@@ -197,11 +198,12 @@ a {
   text-align: left;
   letter-spacing: 1px;
   text-transform: none;
+  margin-bottom: 0;
   margin-right: 60px;
   font-family: Signika, sans-serif;
   font-size: 60px;
   font-weight: 600;
-  line-height: 72px;
+  line-height: 60px;
 }
 
 .button {
@@ -223,10 +225,12 @@ a {
 }
 
 .intro-section {
-  background-color: var(--ghost-white);
-  padding-top: 60px;
+  background-color: var(--color);
+  background-image: linear-gradient(rgba(46, 49, 148, .15), rgba(46, 49, 148, .03));
+  padding-top: 100px;
   padding-bottom: 40px;
   position: relative;
+  overflow: auto;
 }
 
 .intro-section.contact-section {
@@ -291,29 +295,45 @@ a {
 }
 
 .icon-div {
-  margin-top: 60px;
+  margin-top: 40px;
+  overflow: auto;
 }
 
 .grid {
   grid-column-gap: 20px;
-  grid-row-gap: 40px;
+  grid-row-gap: 20px;
   grid-template: "Area"
   / 1fr 1fr 1fr;
-  grid-auto-flow: row;
+  grid-auto-flow: column;
+  align-content: center;
+  justify-content: start;
+  align-items: center;
+  justify-items: stretch;
+  overflow: auto;
 }
 
 .image {
   color: var(--black);
   text-align: center;
   background-color: rgba(0, 0, 0, 0);
+  display: block;
+}
+
+.image.svg-icon {
+  color: var(--orange-red);
+  overflow: auto;
 }
 
 .icon-card {
+  width: 100%;
   text-align: left;
   background-color: rgba(0, 0, 0, 0);
+  justify-content: flex-start;
+  align-items: center;
   padding: 20px;
+  display: flex;
   position: relative;
-  overflow: visible;
+  overflow: auto;
 }
 
 .icon-title {
@@ -335,10 +355,9 @@ a {
 }
 
 .icon-image {
-  width: 94px;
+  width: 300px;
   float: left;
-  background-color: var(--orange-red);
-  border-radius: 100px;
+  background-color: var(--color);
   flex-direction: row;
   grid-template-rows: auto auto;
   grid-template-columns: 1fr 1fr;
@@ -348,10 +367,10 @@ a {
   align-items: flex-start;
   margin-left: auto;
   margin-right: auto;
-  padding: 5px;
   display: block;
   position: static;
   top: 0;
+  overflow: auto;
 }
 
 .print-work-section {
@@ -611,21 +630,28 @@ a {
 }
 
 .icon-card-content {
-  width: 100%;
+  width: auto;
+  height: auto;
   float: none;
   text-align: center;
+  flex-direction: column;
+  justify-content: center;
   align-self: flex-start;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  display: inline-block;
+  display: block;
   position: static;
+  overflow: auto;
 }
 
 .icon-card-content-parent {
+  width: 100%;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
   text-align: left;
-  align-items: stretch;
-  display: block;
+  flex-flow: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  display: flex;
+  overflow: auto;
 }
 
 .heading-four-contact {
@@ -979,6 +1005,20 @@ a {
   margin-right: auto;
 }
 
+.hero-heading-one-linetwo {
+  width: 100%;
+  color: var(--dark-slate-blue);
+  text-align: left;
+  letter-spacing: 1px;
+  text-transform: none;
+  margin-top: 0;
+  margin-right: 60px;
+  font-family: Signika, sans-serif;
+  font-size: 120px;
+  font-weight: 600;
+  line-height: 130px;
+}
+
 @media screen and (max-width: 991px) {
   .navbar {
     position: relative;
@@ -1045,7 +1085,7 @@ a {
 
   .intro-section {
     margin-top: 0;
-    padding-top: 20px;
+    padding-top: 40px;
     padding-bottom: 60px;
   }
 
@@ -1077,9 +1117,11 @@ a {
   }
 
   .icon-image {
+    width: 100px;
     margin-left: auto;
     margin-right: auto;
     padding: 5px;
+    overflow: auto;
   }
 
   .print-work-section {
@@ -1116,8 +1158,9 @@ a {
   }
 
   .intro-paragraph {
-    font-size: 18px;
-    line-height: 32px;
+    font-size: 16px;
+    line-height: 28px;
+    overflow: auto;
   }
 
   .intro-div, .div-block-3 {
@@ -1155,6 +1198,12 @@ a {
     font-size: 20px;
   }
 
+  .subtitle.hero-area {
+    font-size: 20px;
+    line-height: 30px;
+    overflow: auto;
+  }
+
   .div-block-8 {
     width: 40%;
     height: auto;
@@ -1186,6 +1235,15 @@ a {
     min-height: 270px;
     margin-right: 10px;
   }
+
+  .hero-heading-one-linetwo {
+    width: 100%;
+    text-align: left;
+    margin-bottom: 40px;
+    margin-right: 20px;
+    font-size: 60px;
+    line-height: 70px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1208,10 +1266,10 @@ a {
   }
 
   .hero-heading-one {
-    text-align: center;
+    text-align: left;
     margin-bottom: 0;
     margin-right: 10px;
-    font-size: 34px;
+    font-size: 24px;
     line-height: 36px;
   }
 
@@ -1228,10 +1286,17 @@ a {
     min-height: 60px;
   }
 
+  .icon-div {
+    margin-top: 20px;
+    overflow: auto;
+  }
+
   .grid {
     grid-row-gap: 20px;
     grid-template-columns: 1fr;
     grid-template-areas: "Area";
+    grid-auto-flow: row;
+    overflow: auto;
   }
 
   .icon-card {
@@ -1244,9 +1309,11 @@ a {
   }
 
   .icon-image {
+    width: 80px;
     margin-left: auto;
     margin-right: auto;
     padding: 5px;
+    overflow: auto;
   }
 
   .print-work-section {
@@ -1280,7 +1347,7 @@ a {
 
   .intro-paragraph {
     font-size: 16px;
-    line-height: 30px;
+    line-height: 26px;
   }
 
   .div-block-3 {
@@ -1288,12 +1355,16 @@ a {
   }
 
   .icon-card-content {
-    width: 70%;
+    width: 100%;
     margin-top: 0;
+    overflow: auto;
   }
 
   .icon-card-content-parent {
+    flex-direction: row;
+    align-items: center;
     display: flex;
+    overflow: auto;
   }
 
   .portfolio-section {
@@ -1312,7 +1383,8 @@ a {
   .subtitle.hero-area {
     font-size: 18px;
     line-height: 26px;
-    display: none;
+    display: block;
+    overflow: auto;
   }
 
   .subtitle.hide-hero-text {
@@ -1347,6 +1419,14 @@ a {
     text-align: center;
     margin-right: 0;
   }
+
+  .hero-heading-one-linetwo {
+    text-align: left;
+    margin-bottom: 0;
+    margin-right: 10px;
+    font-size: 54px;
+    line-height: 64px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -1376,10 +1456,11 @@ a {
   }
 
   .hero-heading-one {
-    text-align: center;
-    margin-bottom: 20px;
+    text-align: left;
+    letter-spacing: -.25px;
+    margin-bottom: 0;
     margin-right: 0;
-    font-size: 24px;
+    font-size: 20px;
     line-height: 28px;
   }
 
@@ -1397,8 +1478,9 @@ a {
 
   .intro-section {
     margin-top: 0;
-    padding-top: 40px;
+    padding-top: 20px;
     padding-bottom: 80px;
+    overflow: auto;
   }
 
   .intro-section.contact-section {
@@ -1430,7 +1512,8 @@ a {
   }
 
   .icon-div {
-    margin-top: 40px;
+    margin-top: 20px;
+    overflow: auto;
   }
 
   .grid {
@@ -1494,7 +1577,7 @@ a {
   .intro-paragraph {
     margin-top: 10px;
     font-size: 16px;
-    line-height: 27px;
+    line-height: 26px;
   }
 
   .intro-div, .div-block-3 {
@@ -1502,14 +1585,18 @@ a {
   }
 
   .icon-card-content {
-    width: 80%;
+    width: 100%;
     flex: 0 auto;
     align-self: flex-start;
     margin-top: 0;
+    overflow: auto;
   }
 
   .icon-card-content-parent {
+    flex-direction: column;
+    align-items: flex-start;
     display: flex;
+    overflow: auto;
   }
 
   .heading-four-contact {
@@ -1595,7 +1682,8 @@ a {
   }
 
   .subtitle.hero-area {
-    display: none;
+    display: block;
+    overflow: auto;
   }
 
   .subtitle.hide-hero-text {
@@ -1626,6 +1714,15 @@ a {
 
   .div-block-9 {
     width: 100%;
+  }
+
+  .hero-heading-one-linetwo {
+    text-align: left;
+    margin-top: 0;
+    margin-bottom: 20px;
+    margin-right: 0;
+    font-size: 34px;
+    line-height: 34px;
   }
 }
 
